Prevented prereq table overflow onto buttons

--- a/main.css
+++ b/main.css
@@ -271,10 +271,16 @@ h3 {
   text-align: center;
 }
 
-.modalHeader, td{
+.modalHeader{
   text-align: left;
   margin-top: -20px;
   padding: 18px;
+}
+
+td{
+  text-align: left;
+  margin-top: -20px;
+  padding: 10px;
 }
 
 button.files{
